--- a/adminbypass.html
+++ b/adminbypass.html
@@ -16,7 +16,7 @@
         <h1>Download Adminbypass</h1>
         <h2>Click Button to download Adminbypass file</h2>
         <center>
-            <a href="/path/to/file.pdf" download>
+            <a href="adminbypass.bat" download>
                 <button>Download File</button>
               </a>              
         </center>
